--- a/packages/workspace/Dockerfile
+++ b/packages/workspace/Dockerfile
@@ -1,9 +1,7 @@
-ARG ORGNANIZATION
-ARG PROJECT
 ARG IMAGE_BASE
 ARG PROJECT_VERSION="latest"
 
-FROM $IMAGE_BASE/base:$PROJECT_VERSION
+FROM $IMAGE_BASE/workspace-base:$PROJECT_VERSION
 WORKDIR /workspace
 ENV PATH=/workspace/node_modules/.bin:$PATH
 
