--- a/packages/nx-plugins/lighthouse/Dockerfile
+++ b/packages/nx-plugins/lighthouse/Dockerfile
@@ -1,7 +1,7 @@
 ARG IMAGE_BASE
 ARG PROJECT_VERSION="latest"
 
-FROM $IMAGE_BASE/base:$PROJECT_VERSION AS base
+FROM $IMAGE_BASE/workspace-base:$PROJECT_VERSION AS base
 
 RUN apk add chromium
 RUN yarn global add lighthouse@12.2.1
