feat(nx-plugins-docker-compose): add docker-compose executor

--- a/nx.json
+++ b/nx.json
@@ -48,6 +48,9 @@
             "plugin": "nx-plugins-docker"
         },
         {
+            "plugin": "nx-plugins-docker-compose"
+        },
+        {
             "plugin": "nx-plugins-lighthouse"
         },
         {
