--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,8 @@ build workspace image:
   image: docker:${DOCKER_VERSION}
   cache: []
   script:
-    - nx run-many -t docker-build -p workspace-base workspace --parallel 1 --nxBail
+    - docker build -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} -f packages/workspace/base/Dockerfile --push .
+    - docker build -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --push .
   resource_group: single
 
 install deps:
@@ -132,9 +133,7 @@ build images:
   script:
     - nx docker-build workspace-deps
     - nx affected -t docker-build --parallel=1
-    - nx affected -t docker-push
     - nx docker-build just-documentation
-    - nx docker-push just-documentation
   resource_group: single
 
 tag latest images:
