fix(nx-plugins-lighthouse, just): fix lighthouse executor

--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -368,14 +368,14 @@ services:
   music-platform:
     <<: *common
     environment:
-      - ND_PORT=${MUSIC_PORT}
+      - ND_PORT=${MUSIC_PLATFORM_PORT}
       - ND_REVERSEPROXYUSERHEADER=${NGINX_AUTH_USERNAME_HEADER}
       - ND_REVERSEPROXYWHITELIST=0.0.0.0/0
       - ND_DEFAULTTHEME=spotify-ish
       - ND_ENABLECOVERANIMATION=false
       - ND_ENABLESTARRATING=false
       - ND_LASTFM_ENABLED=false
-      - ND_PASSWORDENCRYPTIONKEY=${MUSIC_PASSWORD_ENCRYPTION_KEY}
+      - ND_PASSWORDENCRYPTIONKEY=${MUSIC_PLATFORM_PASSWORD_ENCRYPTION_KEY}
       - ND_SCANSCHEDULE=1h
       - ND_SESSIONTIMEOUT=720h
       - ND_UILOGINBACKGROUNDURL=https://images.pexels.com/photos/2111015/pexels-photo-2111015.jpeg?cs=srgb&dl=pexels-francesco-paggiaro-2111015.jpg&fm=jpg&w=1920&h=1280
@@ -510,13 +510,13 @@ services:
   website:
     <<: *common
     environment:
-      - GITHUB_TOKEN=${JUST_SITE_GITHUB_TOKEN}
+      - GITHUB_TOKEN=${WEBSITE_GITHUB_TOKEN}
       - URL=${URL}
-      - GRAVATAR_EMAIL=${JUST_SITE_GRAVATAR_EMAIL}
+      - GRAVATAR_EMAIL=${WEBSITE_GRAVATAR_EMAIL}
       - CMS_URL=${CMS_URL}
-      - CMS_USER=${JUST_SITE_CMS_USER}
-      - CMS_PASSWORD=${JUST_SITE_CMS_PASSWORD}
-      - PORT=${JUST_SITE_PORT}
+      - CMS_USER=${WEBSITE_CMS_USER}
+      - CMS_PASSWORD=${WEBSITE_CMS_PASSWORD}
+      - PORT=${WEBSITE_PORT}
       - SMTP_HOST=${SMTP_HOST}
       - SMTP_PORT=${SMTP_PORT}
       - SMTP_USERNAME=${SMTP_USERNAME}
