--- a/packages/zinzow/docker-compose.yaml
+++ b/packages/zinzow/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       - ADMIN_PASSWORD=${CMS_PASSWORD}
       - PUBLIC_URL=https://cms.${DOMAIN}
       - DB_CLIENT=pg
-      - DB_HOST=db
+      - DB_HOST=postgres
       - DB_PORT=5432
       - DB_DATABASE=directus
       - DB_USER=${POSTGRES_USERNAME}
