feat(nx-plugins-codegen): add codegen plugin

--- a/nx.json
+++ b/nx.json
@@ -42,6 +42,9 @@
             "plugin": "nx-plugins-astro"
         },
         {
+            "plugin": "nx-plugins-codegen"
+        },
+        {
             "plugin": "nx-plugins-directus-extensions"
         },
         {
