--- a/package.json
+++ b/package.json
@@ -32,11 +32,17 @@
         "trivy": "tsx packages/workspace/scripts/src/trivy-analyze-fs.ts"
     },
     "devDependencies": {
+        "@apollo/client": "^3.11.10",
         "@astrojs/tailwind": "^5.1.2",
         "@cloudflare/kv-asset-handler": "^0.3.4",
         "@cloudflare/workers-types": "^4.20241112.0",
         "@directus/extensions-sdk": "^12.0.2",
         "@directus/types": "^12.0.1",
+        "@graphql-codegen/cli": "^5.0.3",
+        "@graphql-codegen/introspection": "^4.0.3",
+        "@graphql-codegen/plugin-helpers": "^5.1.0",
+        "@graphql-codegen/typescript": "^4.1.2",
+        "@graphql-codegen/typescript-operations": "^4.4.0",
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "20.0.3",
         "@nx/eslint": "20.0.3",
@@ -60,6 +66,7 @@
         "@swc/core": "1.7.11",
         "@testing-library/react": "16.0.1",
         "@types/d3": "^7.4.3",
+        "@types/graphql": "^14.5.0",
         "@types/node": "20.15.0",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.10",
@@ -92,6 +99,9 @@
         "eslint-plugin-svelte3": "^4.0.0",
         "flowbite-svelte": "^0.46.15",
         "glob": "^11.0.0",
+        "graphql": "^16.9.0",
+        "graphql-codegen-svelte-apollo": "^1.1.0",
+        "graphql-tag": "^2.12.6",
         "husky": "^9.1.6",
         "inquirer": "^10.2.2",
         "jsdom": "~24.1.3",
@@ -108,6 +118,7 @@
         "simple-git": "^3.27.0",
         "stream-browserify": "^3.0.0",
         "svelte": "^4.2.18",
+        "svelte-apollo": "^0.5.0",
         "svelte-check": "^3.8.5",
         "svelte-infinite-scroll": "^2.0.1",
         "tailwindcss": "3.4.10",
@@ -127,6 +138,7 @@
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
         "@notionhq/client": "^2.2.15",
         "@nx/devkit": "20.0.3",
+        "@parcel/watcher": "^2.5.0",
         "@swc/helpers": "0.5.12",
         "@t3-oss/env-core": "^0.11.0",
         "@tailwindcss/forms": "^0.5.7",
