--- a/packages/just/music/downloader/project.json
+++ b/packages/just/music/downloader/project.json
@@ -4,5 +4,5 @@
     "sourceRoot": "packages/just/music/downloader",
     "projectType": "application",
     "targets": {},
-    "tags": ["just-music-downloader"]
+    "tags": ["app"]
 }
