--- a/packages/zinzow/website/.env.secure.yaml
+++ b/packages/zinzow/website/.env.secure.yaml
@@ -7,3 +7,10 @@ secrets:
     vars:
       - URL
       - PORT
+      - CMS_TOKEN
+
+  ../cms:
+    prefix: true
+    vars:
+      - DOMAIN
+      - URL
