--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@swc/cli": "0.4.0",
         "@swc/core": "1.7.11",
         "@testing-library/react": "16.0.1",
+        "@types/color": "^4.2.0",
         "@types/d3": "^7.4.3",
         "@types/graphql": "^14.5.0",
         "@types/node": "20.15.0",
@@ -146,7 +147,9 @@
         "@trpc/next": "^10.45.2",
         "@trpc/server": "^10.45.2",
         "axios": "^1.7.4",
+        "classnames": "^2.5.1",
         "clsx": "^2.1.1",
+        "color": "^4.2.3",
         "dotenv": "^16.4.5",
         "encoding": "^0.1.13",
         "mermaid": "~9.1.7",
