--- a/packages/just/website/project.json
+++ b/packages/just/website/project.json
@@ -4,5 +4,5 @@
     "sourceRoot": "packages/just/website/src",
     "projectType": "application",
     "targets": {},
-    "tags": ["just-website"]
+    "tags": ["app", "just-website"]
 }
