--- a/packages/zinzow/website/project.json
+++ b/packages/zinzow/website/project.json
@@ -3,6 +3,14 @@
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/zinzow/website/src",
     "projectType": "application",
-    "targets": {},
-    "tags": []
+    "targets": {
+        "codegen": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "graphql-codegen --config codegen.ts",
+                "cwd": "packages/zinzow/website"
+            }
+        }
+    },
+    "tags": ["app"]
 }
