feat(zinzow-website): added about page

--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -9,6 +9,7 @@ secrets:
   cms:
     prefix: true
     vars:
+      - DOMAIN
       - URL
       - USERNAME
       - PASSWORD
@@ -34,3 +35,10 @@ secrets:
     prefix: true
     vars:
       - TOKEN
+
+  website:
+    prefix: true
+    vars:
+      - URL
+      - PORT
+      - CMS_TOKEN
