--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
         "svelte-apollo": "^0.5.0",
         "svelte-check": "^3.8.5",
         "svelte-infinite-scroll": "^2.0.1",
+        "tailwind-merge": "^2.5.5",
         "tailwindcss": "3.4.10",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
