chore(zinzow-website): fix eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,11 @@
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "ignorePatterns": ["**/*"],
     "plugins": ["@nx", "svelte3", "@typescript-eslint", "@stylistic/eslint-plugin-ts"],
+    "env": {
+        "browser": true,
+        "es2017": true,
+        "node": true
+    },
     "overrides": [
         {
             "files": ["*"],
@@ -15,7 +20,11 @@
             "files": ["*.svelte"],
             "parser": "svelte-eslint-parser",
             "parserOptions": {
-                "parser": "@typescript-eslint/parser"
+                "parser": "@typescript-eslint/parser",
+                "sourceType": "module",
+                "ecmaVersion": "latest",
+                "extraFileExtensions": [".svelte"],
+                "lib": ["esnext", "dom"]
             }
         },
         {
