--- a/packages/zinzow/website/.eslintrc.json
+++ b/packages/zinzow/website/.eslintrc.json
@@ -1,8 +1,7 @@
 {
     "parser": "@typescript-eslint/parser",
     "extends": ["../../../.eslintrc.json"],
-    "plugins": ["svelte3", "@typescript-eslint"],
-    "ignorePatterns": ["!**/*", "vite.config.ts", "node_modules", ".svelte-kit"],
+    "ignorePatterns": ["!**/*", "src/**/generated", "vite.config.ts", ".svelte-kit"],
     "overrides": [
         {
             "files": ["*.svelte"],
@@ -11,15 +10,5 @@
                 "parser": "@typescript-eslint/parser"
             }
         }
-    ],
-    "parserOptions": {
-        "sourceType": "module",
-        "ecmaVersion": 2020,
-        "extraFileExtensions": [".svelte"]
-    },
-    "env": {
-        "browser": true,
-        "es2017": true,
-        "node": true
-    }
+    ]
 }
