--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - workspace
   - deps
   - env
+  - codegen
   - lint
   - test
   - build
@@ -20,6 +21,7 @@ variables:
   DOCKER_VERSION: 27.2.0
   DEPS_CACHE_POLICY: pull
   ENV_CACHE_POLICY: pull
+  CODEGEN_CACHE_POLICY: pull
   MASTER_BRANCH: master
   DEV_BRANCH: develop
 
@@ -46,6 +48,10 @@ default:
         - ./packages/**/*.pem
         - ./**/.ssh/
       policy: $ENV_CACHE_POLICY
+    - key: cache-${CI_COMMIT_SHA}
+      paths:
+        - ./packages/**/generated/*
+      policy: $CODEGEN_CACHE_POLICY
   before_script:
     - export PATH="$PWD/node_modules/.bin:$PATH"
     - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ] || [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export NX_BASE=$(git log --merges -1 --format=%H); fi
@@ -76,6 +82,14 @@ generate env files:
   script:
     - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then export STAGE=PROD; elif [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export STAGE=TEST,PROD; else export STAGE=DEV,TEST,PROD; fi
     - nx g env-files ${STAGE} ${BITWARDEN_USER} ${BITWARDEN_PASSWORD}
+  resource_group: single
+
+codegen:
+  stage: codegen
+  variables:
+    CODEGEN_CACHE_POLICY: push
+  script:
+    - nx affected -t codegen
   resource_group: single
 
 check formatting:
