--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -75,6 +75,12 @@ secrets:
       - PASSWORD
       - WEB_PORT
 
+  ../dockerhub:
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
+
   gitlab:
     prefix: true
     vars:
