chore(just-nginx): update config (fix music, remove old services)

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -221,20 +221,6 @@ server {
 }
 
 server {
-    set_by_lua_block $linkwarden_port { return os.getenv("LINKWARDEN_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name links.justinkonratt.com;
-
-    location / {
-        rewrite ^/api/auth/(.*)$ /api/v1/auth/$1 last;
-        set $upstream linkwarden:$linkwarden_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
     set_by_lua_block $music_platform_port { return os.getenv("MUSIC_PLATFORM_PORT"); }
 
     listen 443 ssl http2;
@@ -256,7 +242,7 @@ server {
 
     location / {
         access_by_lua_file /etc/nginx/lua/access.lua;
-    	set $upstream music:$music_port;
+    	set $upstream music-platform:$music_port;
         proxy_pass http://$upstream;
     }
 }
@@ -332,23 +318,6 @@ server {
 
     location / {
         set $upstream prometheus:$prometheus_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
-    set_by_lua_block $scoreboard_port { return os.getenv("SCOREBOARD_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name scoreboard.justinkonratt.com;
-
-    if ($is_private_ip = false) {
-        return 403;
-    }
-
-    location / {
-        set $upstream scoreboard:$scoreboard_port;
         proxy_pass http://$upstream;
     }
 }
