--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -36,6 +36,7 @@
         "vue.volar",
         "ms-vscode-remote.remote-wsl",
         "redhat.vscode-yaml",
-        "valentjn.vscode-ltex"
+        "valentjn.vscode-ltex",
+        "bbenoist.nix"
     ]
 }
