fix(just, zinzow): add ssh root destination

--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -26,6 +26,7 @@ secrets:
     vars:
       - USERNAME
       - HOST
+      - ROOT_DESTINATION
       - name: PRIVATE_KEY
         file: ./.ssh/id_rsa
       - name: KNOWN_HOSTS
