--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -156,6 +156,7 @@ secrets:
     vars:
       - USERNAME
       - HOST
+      - ROOT_DESTINATION
       - name: PRIVATE_KEY
         file: ./.ssh/id_rsa
       - name: KNOWN_HOSTS
