build(workspace-deps): remove docker cache

--- a/packages/workspace/deps/Dockerfile
+++ b/packages/workspace/deps/Dockerfile
@@ -3,4 +3,4 @@ ARG PROJECT_VERSION="latest"
 
 FROM $IMAGE_BASE/workspace:$PROJECT_VERSION
 COPY package.json pnpm-lock.yaml ./
-RUN --mount=type=cache,target=/tmp/.pnpm-store nci
+RUN nci
