--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,9 @@ default:
   services:
     - name: docker:${DOCKER_VERSION}-dind
       alias: docker
+      command:
+        - "--feature"
+        - "containerd-snapshotter=true"
   cache:
     - key:
         files:
@@ -61,14 +64,9 @@ build workspace image:
   image: docker:${DOCKER_VERSION}
   cache: []
   script:
-    - docker build --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}_linux-amd64 -f packages/workspace/base/Dockerfile --platform=linux/amd64 .
-    - docker build --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}_linux-arm64 -f packages/workspace/base/Dockerfile --platform=linux/arm64 .
-    - docker manifest create ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} --amend ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}_linux-amd64 --amend ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}_linux-arm64
-    - docker manifest push ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION}
-    - docker build --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION}_linux-amd64 -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --platform=linux/amd64 .
-    - docker build --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION}_linux-arm64 -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --platform=linux/arm64 .
-    - docker manifest create ${IMAGE_BASE}/workspace:${PROJECT_VERSION} --amend ${IMAGE_BASE}/workspace:${PROJECT_VERSION}_linux-amd64 --amend ${IMAGE_BASE}/workspace:${PROJECT_VERSION}_linux-arm64
-    - docker manifest push ${IMAGE_BASE}/workspace:${PROJECT_VERSION}
+    - docker info
+    - docker build --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} -f packages/workspace/base/Dockerfile --platform=linux/amd64,linux/arm64 .
+    - docker build --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --platform=linux/amd64,linux/arm64 .
   resource_group: single
 
 install deps:
