fix(ci): dockerd command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,8 @@ default:
     - name: docker:${DOCKER_VERSION}-dind
       alias: docker
       command:
-        - "--features"
-        - "containerd-snapshotter=true"
+        - "--feature"
+        - "containerd-snapshotter"
   cache:
     - key:
         files:
