--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,8 +64,10 @@ build workspace image:
   cache: []
   script:
     - docker info
-    - docker build --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} -f packages/workspace/base/Dockerfile --platform=linux/amd64,linux/arm64 .
-    - docker build --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --platform=linux/amd64,linux/arm64 .
+    - docker buildx create --use
+    - docker buildx inspect --bootstrap
+    - docker buildx build --push -t ${IMAGE_BASE}/workspace-base:${PROJECT_VERSION} -f packages/workspace/base/Dockerfile --platform=linux/amd64,linux/arm64 .
+    - docker buildx build --push -t ${IMAGE_BASE}/workspace:${PROJECT_VERSION} -f packages/workspace/Dockerfile --build-arg IMAGE_BASE=${IMAGE_BASE} --build-arg PROJECT_VERSION=${PROJECT_VERSION} --platform=linux/amd64,linux/arm64 .
   resource_group: single
 
 install deps:
