--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -73,19 +73,6 @@ server {
 }
 
 server {
-    set_by_lua_block $ghost_port { return os.getenv("GHOST_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name blog.justinkonratt.com;
-
-    location / {
-        set $upstream ghost:$ghost_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
     set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT"); }
 
     listen 443 ssl http2;
@@ -129,8 +116,11 @@ server {
     }
 
     location / {
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Protocol https;
+        proxy_set_header Host $host;
         client_max_body_size 1G;
-        set $upstream docker-registry:$docker_registry_port;
+        set $upstream gitlab:$docker_registry_port;
         proxy_pass http://$upstream;
     }
 }
@@ -148,23 +138,6 @@ server {
 
     location / {
         set $upstream documentation:$documentation_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
-    set_by_lua_block $doku_port { return os.getenv("DOKU_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name doku.justinkonratt.com;
-
-    if ($is_private_ip = false) {
-        return 403;
-    }
-
-    location / {
-        set $upstream doku:$doku_port;
         proxy_pass http://$upstream;
     }
 }
@@ -203,19 +176,6 @@ server {
 
     location / {
         set $upstream grafana:$grafana_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
-    set_by_lua_block $website_port { return os.getenv("WEBSITE_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name justinkonratt.com;
-
-    location / {
-        set $upstream website:$website_port;
         proxy_pass http://$upstream;
     }
 }
@@ -361,6 +321,19 @@ server {
 
     location / {
         set $upstream wandb:$wandb_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $website_port { return os.getenv("WEBSITE_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name justinkonratt.com;
+
+    location / {
+        set $upstream website:$website_port;
         proxy_pass http://$upstream;
     }
 }
