--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -202,7 +202,7 @@ server {
 
     location / {
         access_by_lua_file /etc/nginx/lua/access.lua;
-    	set $upstream music-platform:$music_port;
+    	set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
 }
@@ -241,7 +241,7 @@ server {
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
-        set $upstream $server_address:$netdata_port;
+        set $upstream 172.17.0.1:$netdata_port;
         proxy_pass http://$upstream;
     }
 }
