--- a/packages/just/prometheus/prometheus.yaml
+++ b/packages/just/prometheus/prometheus.yaml
@@ -46,7 +46,7 @@ scrape_configs:
       #server: ["prometheus1"]
     honor_labels: true
     static_configs:
-      - targets: ["194.164.202.152:19999"]
+      - targets: ["host.docker.internal:19999"]
   #################################################################################################
 
   - job_name: gitlab
