--- a/packages/just/music/platform/Dockerfile
+++ b/packages/just/music/platform/Dockerfile
@@ -1,4 +1,6 @@
-FROM deluan/navidrome:0.53.3
+ARG DOCKER_PROXY
+
+FROM $DOCKER_PROXY/deluan/navidrome:0.53.3
 
 RUN adduser --disabled-password navidrome
 
