--- a/packages/just/prometheus/Dockerfile
+++ b/packages/just/prometheus/Dockerfile
@@ -1,4 +1,6 @@
-FROM prom/prometheus:v2.54.1
+ARG DOCKER_PROXY
+
+FROM $DOCKER_PROXY/prom/prometheus:v2.54.1
 ARG APP_DIR=just/prometheus
 
 COPY /packages/$APP_DIR/prometheus.yaml /etc/prometheus/prometheus.yml
