--- a/packages/shared/certbot/Dockerfile
+++ b/packages/shared/certbot/Dockerfile
@@ -1,4 +1,6 @@
-FROM certbot/dns-cloudflare
+ARG DOCKER_PROXY
+
+FROM $DOCKER_PROXY/certbot/dns-cloudflare
 ARG APP_DIR=shared/certbot
 
 COPY ./packages/$APP_DIR/entrypoint.sh /usr/local/bin/
