--- a/packages/shared/renovate/Dockerfile
+++ b/packages/shared/renovate/Dockerfile
@@ -1,4 +1,6 @@
-FROM renovate/renovate:38.89.2
+ARG DOCKER_PROXY
+
+FROM $DOCKER_PROXY/renovate/renovate:38.89.2
 ARG APP_DIR=shared/renovate
 
 COPY /packages/$APP_DIR/config.js /usr/src/app/config.js
