--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ default:
   before_script:
     - export PATH="$PWD/node_modules/.bin:$PATH"
     - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ] || [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export NX_BASE=$(git log origin/$CI_COMMIT_BRANCH --first-parent --merges -n 1 --skip 1 --format=%H); fi
+    - echo "$CI_DEPENDENCY_PROXY_SERVER"
     - echo "$CI_DEPENDENCY_PROXY_PASSWORD" | docker login $CI_DEPENDENCY_PROXY_SERVER -u $CI_DEPENDENCY_PROXY_USER --password-stdin
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     - docker network create --driver=bridge builder-network
@@ -125,7 +126,7 @@ sonarqube:
   stage: lint
   cache: []
   image:
-    name: sonarsource/sonar-scanner-cli:11.1
+    name: ${DOCKER_PROXY}/sonarsource/sonar-scanner-cli:11.1
     entrypoint: [""]
   script:
     - sonar-scanner
