--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ variables:
   PROJECT: monorepo
   IMAGE_BASE: ${CI_REGISTRY}/${ORGANIZATION}/${PROJECT}
   DOCKER_PROXY: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}
+  BUILDX_IMAGE: moby/buildkit:buildx-stable-1
   DOCKER_VERSION: 27.5.1
   DEPS_CACHE_POLICY: pull
   ENV_CACHE_POLICY: pull
@@ -56,11 +57,14 @@ default:
   before_script:
     - export PATH="$PWD/node_modules/.bin:$PATH"
     - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ] || [ "$CI_COMMIT_BRANCH" = "$DEV_BRANCH" ]; then export NX_BASE=$(git log origin/$CI_COMMIT_BRANCH --first-parent --merges -n 1 --skip 1 --format=%H); fi
+    # registry logins
     - echo "$CI_DEPENDENCY_PROXY_PASSWORD" | docker login $CI_DEPENDENCY_PROXY_SERVER -u $CI_DEPENDENCY_PROXY_USER --password-stdin
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
+    # buildx builder
     - docker network create --driver=bridge builder-network
-    - docker buildx create --use --driver-opt network=builder-network
-    - docker buildx inspect --bootstrap
+    - docker pull ${DOCKER_PROXY}/${BUILDX_IMAGE}
+    - docker tag ${DOCKER_PROXY}/${BUILDX_IMAGE} ${BUILDX_IMAGE}
+    - docker buildx create --use --driver-opt network=builder-network --bootstrap
 
 build workspace image:
   stage: workspace
