--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,6 @@ variables:
   PROJECT: monorepo
   IMAGE_BASE: ${CI_REGISTRY}/${ORGANIZATION}/${PROJECT}
   DOCKER_PROXY: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}
-  BUILDX_IMAGE: moby/buildkit:buildx-stable-1
   DOCKER_VERSION: 27.5.1
   DEPS_CACHE_POLICY: pull
   ENV_CACHE_POLICY: pull
@@ -62,9 +61,7 @@ default:
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     # buildx builder
     - docker network create --driver=bridge builder-network
-    - docker pull ${DOCKER_PROXY}/${BUILDX_IMAGE}
-    - docker tag ${DOCKER_PROXY}/${BUILDX_IMAGE} ${BUILDX_IMAGE}
-    - docker buildx create --use --driver-opt network=builder-network --bootstrap
+    - docker buildx create --use --driver-opt network=builder-network --driver-opt image=${DOCKER_PROXY}/moby/buildkit:buildx-stable-1 --bootstrap
 
 build workspace image:
   stage: workspace
