--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
         "trivy": "tsx packages/workspace/scripts/src/trivy-analyze-fs.ts"
     },
     "devDependencies": {
+        "@^20.4.6": "link:@nx/eslint/@^20.4.6",
         "@apollo/client": "^3.11.10",
         "@astrojs/tailwind": "^5.1.5",
         "@cloudflare/kv-asset-handler": "^0.3.4",
         "@cloudflare/workers-types": "^4.20241112.0",
         "@directus/extensions-sdk": "^12.0.2",
         "@directus/types": "^12.0.1",
+        "@eslint/eslintrc": "^3.3.0",
+        "@eslint/js": "^9.21.0",
         "@graphql-codegen/cli": "^5.0.3",
         "@graphql-codegen/introspection": "^4.0.3",
         "@graphql-codegen/plugin-helpers": "^5.1.0",
@@ -46,7 +49,7 @@
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "20.0.3",
         "@nx/eslint": "20.0.3",
-        "@nx/eslint-plugin": "20.0.3",
+        "@nx/eslint-plugin": "20.4.6",
         "@nx/js": "20.0.3",
         "@nx/next": "20.0.3",
         "@nx/node": "20.0.3",
@@ -88,7 +91,7 @@
         "emailjs": "^4.0.3",
         "envsub": "^4.1.0",
         "esbuild": "^0.23.1",
-        "eslint": "^8.57.0",
+        "eslint": "^9.21.0",
         "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.31.0",
@@ -100,6 +103,7 @@
         "eslint-plugin-svelte3": "^4.0.0",
         "flowbite-svelte": "^0.46.15",
         "glob": "^11.0.0",
+        "globals": "^16.0.0",
         "graphql": "^16.9.0",
         "graphql-codegen-svelte-apollo": "^1.1.0",
         "graphql-tag": "^2.12.6",
@@ -121,6 +125,7 @@
         "svelte": "^4.2.18",
         "svelte-apollo": "^0.5.0",
         "svelte-check": "^3.8.5",
+        "svelte-eslint-parser": "^1.0.0",
         "svelte-infinite-scroll": "^2.0.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "3.4.10",
