--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "trivy": "tsx packages/workspace/scripts/src/trivy-analyze-fs.ts"
     },
     "devDependencies": {
-        "@^20.4.6": "link:@nx/eslint/@^20.4.6",
         "@apollo/client": "^3.11.10",
         "@astrojs/tailwind": "^5.1.5",
         "@cloudflare/kv-asset-handler": "^0.3.4",
@@ -48,7 +47,7 @@
         "@graphql-codegen/typescript-operations": "^4.4.0",
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "20.0.3",
-        "@nx/eslint": "20.0.3",
+        "@nx/eslint": "20.4.6",
         "@nx/eslint-plugin": "20.4.6",
         "@nx/js": "20.0.3",
         "@nx/next": "20.0.3",
@@ -131,8 +130,8 @@
         "tailwindcss": "3.4.10",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
-        "typedoc": "^0.26.10",
-        "typedoc-plugin-markdown": "^4.2.9",
+        "typedoc": "0.27.9",
+        "typedoc-plugin-markdown": "^4.4.2",
         "typescript": "5.5.4",
         "vite": "^5.4.1",
         "vitepress": "1.3.2",
