--- a/packages/just/documentation/Dockerfile
+++ b/packages/just/documentation/Dockerfile
@@ -12,7 +12,7 @@ FROM $IMAGE_BASE/workspace-deps:$PROJECT_VERSION AS workspace-deps
 FROM workspace-deps AS builder
 ARG APP_NAME
 
-COPY .eslintrc.json nx.json README.md tsconfig.json ./
+COPY eslint.config.js nx.json README.md tsconfig.json ./
 COPY docs ./docs
 COPY packages/nx-plugins ./packages/nx-plugins
 COPY packages/shared ./packages/shared
