--- a/packages/workspace/deps/Dockerfile
+++ b/packages/workspace/deps/Dockerfile
@@ -2,5 +2,5 @@ ARG IMAGE_BASE
 ARG PROJECT_VERSION
 
 FROM $IMAGE_BASE/workspace:$PROJECT_VERSION
-COPY package.json pnpm-lock.yaml ./
-RUN --mount=type=cache,target=/tmp/.pnpm-store nci
+COPY package.json *lock* ./
+RUN nci
