--- a/package.json
+++ b/package.json
@@ -172,5 +172,10 @@
         "vue": "^3.4.38",
         "xmlbuilder2": "^3.1.1",
         "zod": "^3.23.8"
-    }
+    },
+    "trustedDependencies": [
+        "@parcel/watcher",
+        "@swc/core",
+        "svelte-preprocess"
+    ]
 }
